# BoyoLuxTTS-Comfyui

./: Dragon Diffusion Lux TTS Example.json  LICENSE  README.md  __init__.py  nodes.py  pyproject.toml  requirements.txt
